--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <body>
     <div id="intro">
       <ul class="nav-bar">
-        <li class="regular-link"><a href="#">About</a></li>
-        <li class="regular-link"><a href="#">FAQ</a></li>
+        <li class="regular-link"><a href="#second">About</a></li>
+        <li class="regular-link"><a href="#third">FAQ</a></li>
         <li class="regular-link"><a href="#">Blog</a></li>
         <li class="regular-link"><a href="#">Staff Picks</a></li>
         <li><span id="sign-in"><a href="#">Sign In</a></span></li>
@@ -21,6 +21,17 @@
         <h1 id="header">COOLASSWEBSITE</h1>
         <p><span class="motto">The website that helps you unlock cool ass websites in real life</span></p>
       </div>
+    </div>
+
+    <div id="second">
+      <h1>TURN YOUR WEBSITE INTO A COOL ASS WEBSITE</h1>
+      <p>With CoolAssWebSite, you can turn your website into a cool ass website by creating an online website list, discover website ideas, achieave website goals while earning levels and badges, and share your "Achievement Unlocked" moments with your friends.</p>
+    </div>
+
+    <div id="third">
+      <h1>PURSUE COOL ASS WEBSITES TOGETHER</h1>
+      <p>The things you went through to achieve your cool ass websites can one day help someone in need of your knowledge. We enable this by connecting cool ass websites together and allow collaboration as a community.
+      </p>
     </div>
 
   </body>
