--- a/index.html
+++ b/index.html
@@ -29,9 +29,16 @@
     </div>
 
     <div id="third">
-      <h1>PURSUE COOL ASS WEBSITES TOGETHER</h1>
-      <p>The things you went through to achieve your cool ass websites can one day help someone in need of your knowledge. We enable this by connecting cool ass websites together and allow collaboration as a community.
-      </p>
+      <div id="third-left">
+        <h1>PURSUE COOL ASS WEBSITES TOGETHER</h1>
+        <p>The things you went through to achieve your cool ass websites can one day help someone in need of your knowledge. We enable this by connecting cool ass websites together and allow collaboration as a community.
+        </p>
+      </div>
+      <div id="third-right">
+        <div>
+          <span class="logo">C</span>
+        </div>
+      </div>
     </div>
 
   </body>
